--- a/wp-content/plugins/custom-article-importer/composer.json
+++ b/wp-content/plugins/custom-article-importer/composer.json
@@ -8,5 +8,15 @@
     "psr-4": {
       "CustomArticleImporter\\": "includes/"
     }
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.7",
+    "slevomat/coding-standard": "^8.14"
   }
 }
