--- a/wp-content/plugins/custom-article-importer/composer.json
+++ b/wp-content/plugins/custom-article-importer/composer.json
@@ -2,7 +2,8 @@
   "name": "cpamatica/custom-article-importer",
   "type": "wordpress-plugin",
   "require": {
-    "composer/installers": "^1.10"
+    "composer/installers": "^1.10",
+    "spatie/emoji": "^4.0"
   },
   "autoload": {
     "psr-4": {
